# parakeet-cpp-py

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  pyproject.toml
patches/: 0001-parakeet-windowed-streaming.patch
src/parakeet_cpp/: __init__.py  bindings.cpp  cli.py
tests/: test_parakeet.py
